--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -2,11 +2,14 @@ spring:
   cloud:
     config:
       server:
-        native:
-          search-locations: classpath:/shared
-  profiles:
-     active: native
-
+#        native:
+#          search-locations: classpath:/shared
+#  profiles:
+#     active: native
+        git:
+          uri: https://github.com/JungleLu/PiggyMetricsConfig.git
+          username: lujgyy@163.com
+          password: ljg181517/*-
 server:
   port: 8888
 
